# purview_sit_analyzer

./: .gitignore  AGENTS.md  README.md  analyze.ipynb  analyzev2.ipynb  e.py  ee_create_sit.ps1  ee_sit.xml  english.txt  generate_sit_from_pdf.py  mx_records_full.xlsx  oo_create_sit.ps1  oo_sit.xml  out_create_sit.ps1  out_sit.json  powerview  r.py  regex  run.py  test.ipynb  v3.ipynb  v3t.ipynb  v3tmp.ipynb  ~$mx_records_full.xlsx
Docs/: Microsoft Built-in SITs.csv  Regex Word Boundry.md
adresss_extraction/: extract_postcodes.py  setup_venv.sh
docs/: best_practices_part2.md  best_pratices.md  guide.md  hhhh.md  imp.md  ms_buit-in_sits.csv  powershell_purview.md  regex_purview.md  regex_word_match_examples.md
scripts/: P.md  Powershell.md  Purview-PowerShell-Technical-Guide.md
v2/: 1_create_venv.sh  2_install_dependencies.sh  setup_purview_project.sh  test.txt
v3/: Untitled.json  purview_sit_analyzer.py  purview_sit_analyzer_updated.py  purview_sit_analyzer_updated_fixed.py  regex_patterns copy.json  regex_patterns.json  regex_patterns.json.bak  regex_patterns_oldd.json  requirements.txt  setup_purview_project.sh  t.py
v3/input/: example.txt
v3/output1/: keywords.csv
v3/output2/: keywords.csv
v3/purview_env/: pyvenv.cfg
v4/: run.sh  setup.sh
v4/engine/: CMakeLists.txt  boost_regex_runner.cpp  keyword_scanner.py
v4/python/: analyzer.py  extractor.py  pattern_loader.py
wordlists/: lex.py  lexicon_latest.csv  weighted_lexicon_clean.txt
wordlists/lexicon_dict/: lex_extract copy.py  lex_extract.py  lexicon_latest.csv  setup_lexicon_dict.sh
(+3 files in other folders)
